fix sonar security issues